[gd_scene format=3 uid="uid://4ksndm8ygrgl"]

[ext_resource type="Script" uid="uid://caa7tcc2w85qf" path="res://game/player/player.gd" id="1_ywqt8"]
[ext_resource type="PackedScene" uid="uid://btknduttnmoxf" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="2_40wtu"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="3_8soms"]
[ext_resource type="Script" uid="uid://cmbucw30474iw" path="res://game/player/components/simulator_component.gd" id="3_a4w0n"]
[ext_resource type="Script" uid="uid://c8w7t01x5mat6" path="res://game/player/components/xr_controller_component.gd" id="3_anr75"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="4_epvkq"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="5_5ghna"]

[sub_resource type="SphereShape3D" id="SphereShape3D_anr75"]
radius = 0.08393856

[sub_resource type="SphereMesh" id="SphereMesh_ywqt8"]
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_40wtu"]
radius = 0.05
height = 0.1

[node name="Player" type="XROrigin3D" unique_id=508514659]
script = ExtResource("1_ywqt8")

[node name="XRCamera3D" type="XRCamera3D" parent="." unique_id=1971797437]
current = true

[node name="VRCommonShaderCache" parent="XRCamera3D" unique_id=1098049451 instance=ExtResource("2_40wtu")]

[node name="MaskDetectionArea" type="Area3D" parent="XRCamera3D" unique_id=1064199200]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRCamera3D/MaskDetectionArea" unique_id=1816848854]
shape = SubResource("SphereShape3D_anr75")

[node name="LeftController" type="XRController3D" parent="." unique_id=1943114489]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
tracker = &"left_hand"
show_when_tracked = true
script = ExtResource("3_anr75")

[node name="HandMesh" type="MeshInstance3D" parent="LeftController" unique_id=803167842]
mesh = SubResource("SphereMesh_ywqt8")

[node name="MovementDirect" parent="LeftController" unique_id=1868435245 instance=ExtResource("4_epvkq")]

[node name="RightController" type="XRController3D" parent="." unique_id=1062506974]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
tracker = &"right_hand"
show_when_tracked = true
script = ExtResource("3_anr75")

[node name="HandMesh" type="MeshInstance3D" parent="RightController" unique_id=1711544714]
mesh = SubResource("SphereMesh_40wtu")
skeleton = NodePath("../../LeftController")

[node name="MovementTurn" parent="RightController" unique_id=658858190 instance=ExtResource("5_5ghna")]

[node name="SimulatorComponent" type="Node" parent="." unique_id=1325402762 node_paths=PackedStringArray("player", "right_controller", "left_controller", "camera")]
script = ExtResource("3_a4w0n")
player = NodePath("..")
right_controller = NodePath("../RightController")
left_controller = NodePath("../LeftController")
camera = NodePath("../XRCamera3D")
metadata/_custom_type_script = "uid://cmbucw30474iw"

[node name="PlayerBody" parent="." unique_id=1621455377 instance=ExtResource("3_8soms")]

[connection signal="body_entered" from="XRCamera3D/MaskDetectionArea" to="." method="_on_mask_detection_area_body_entered"]
[connection signal="button_pressed" from="LeftController" to="." method="_on_left_controller_button_pressed"]
[connection signal="button_released" from="LeftController" to="." method="_on_left_controller_button_released"]
[connection signal="button_pressed" from="RightController" to="." method="_on_right_controller_button_pressed"]
[connection signal="button_released" from="RightController" to="." method="_on_right_controller_button_released"]
